<resources>
    <string name="app_name">TMDB Upcoming</string>
    <string name="release_date">Release Date</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="select_seats">Select Seats</string>
    <string name="screen">Screen</string>
    <string name="pay_now">Pay Now</string>
    <string name="seats">Seats:</string>
    <string name="total">Total</string>
</resources>